# jira-mcp-server

./: .env.example  .gitignore  Dockerfile  README.md  project_structure.txt  pyproject.toml
jira_mcp_server/: server.py  tools.py
jira_mcp_server/config/: logging.py
jira_mcp_server/jira_api_tools/: general.py  issue.py  project.py
